Fixed a small issue
COLORBOX was showing the images really squished in - I found the reason why yet they are still a bit wonky.

Better photography would help this issue! going forward etc..

--- a/final/final_abodeMKE/css/main2.css
+++ b/final/final_abodeMKE/css/main2.css
@@ -163,9 +163,6 @@ text-decoration: none;
 color: deepskyblue;
 }
 
-img{
-max-height: 250px;
-}
 
 /********* TAGLINE **********/
 
@@ -201,6 +198,11 @@ color: ghostwhite;
 }
 
 /********* PAGE SECTION **********/
+
+.column img{
+max-height: 250px;
+}
+
 .houses{
     margin: 20px;
 }
